fixed overflow problem

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -91,6 +91,7 @@
 }
 @media screen and (max-width: 768px){
     .header{
+        position: relative;
         .start{
             margin: 0;
             .logo{
