--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@ body,html{
   margin: 0;
   background-color: $bgcolor;
   width: 100%;
+  margin: 0;
   height: 100%;
   overflow: hidden;
 }
